# dsm-influxdb-extraction

./: .env  .gitignore  check_project_structure.py  nb_influx_data_explore.ipynb  nb_tests_influx_extaction_data.ipynb  pyproject.toml  tests.py
data/exports/: extraction_plan.csv  influx_time_coverage.csv  measurement_time_bounds.csv  measurement_time_bounds_A11_A12_A13_A15_A18.csv  time_bounds.csv
data/raw/: influx_dump_20251021_115756.csv  influx_dump_20251021_122247.csv  influx_dump_20251021_131127.csv  influx_dump_20251021_171432.csv  influx_dump_20251021_171603.csv  influx_dump_20251021_171724.csv
data/raw/eInBat/react2020_eu_device_VIC-GXHQ20503L3SA-1/year=2022/month=02/: eInBat_react2020_eu_device_VIC-GXHQ20503L3SA-1_202202.csv
data/raw/eInBat/react2020_eu_device_VIC-GXHQ20503L3SA-1/year=2022/month=05/: eInBat_react2020_eu_device_VIC-GXHQ20503L3SA-1_202205.csv
data/raw/eInBat/react2020_eu_device_VIC-GXHQ20503L3SA-1/year=2022/month=06/: eInBat_react2020_eu_device_VIC-GXHQ20503L3SA-1_202206.csv
data/raw/eInBat/react2020_eu_device_VIC-GXHQ20503L3SA-1/year=2023/month=03/: eInBat_react2020_eu_device_VIC-GXHQ20503L3SA-1_202303.csv
data/raw/eInBat/react2020_eu_device_VIC-GXHQ20503L3SA-1/year=2023/month=04/: eInBat_react2020_eu_device_VIC-GXHQ20503L3SA-1_202304.csv
src/: pipeline.py
src/influx/: connection.py  extractor.py  query_builder.py
src/influx/tools/: discover_time_bounds.py  time_bounds_exporter.py  validate_has_month_data.py  validate_influx_time_coverage.py
src/storage/: file_writer.py  reorganizer.py
(+147 files in other folders)
