[project]
name = "influxdb-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Mario",email = "leandro.mario@lactec.com.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "influxdb (>=5.3.2,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "git-filter-repo (>=2.47.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
